@@ -271,4 +271,10 @@
     #define PRINTFLIKE(a, b)
 #endif
                      
+/* Define to `__inline__' or `__inline' if that's what the C compiler
+   calls it, or to nothing if 'inline' is not supported under any name.  */
+#ifndef __cplusplus
+#undef inline
+#endif
+
 #endif
